# todd

./: CMakeLists.txt  README  main.cpp
src/: datastruct.cpp  datastruct.h  file.h  log.cpp  log.h  mapper.cpp  mapper.h  utilities.h
test/: CMakeLists.txt  datastruct_test.cpp  log_test.cpp  main_test.cpp  test.sh  utilities_test.cpp
